[package]
name = "fakepod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
rand = "0.8"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
